--- a/src/styles/AboutPage.css
+++ b/src/styles/AboutPage.css
@@ -1,31 +1,40 @@
 /* src/pages/AboutPage.css */
-
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(to right, var(--bg-gradient-start), var(--bg-gradient-end));
+    min-height: 100vh;
+    color: var(--text-primary); /* Add this for text consistency */
+  }
 .about-container {
     margin: 50px auto;
     max-width: 800px;
     padding: 20px;
-    background-color: #f9f9f9;
+    background: var(--card-bg);
+    color: var(--text-primary);    backdrop-filter: blur(10px);
     border-radius: 10px;
   }
   
   .about-container h1 {
-    color: #3a8dad;
+    color: var(--bg-D);
     margin-bottom: 20px;
   }
   
   .about-container p {
     font-size: 16px;
     margin-bottom: 15px;
-    color: #555;
+    color: var(--text-secondary);
   }
   
   .about-container ul {
     list-style-type: disc;
     padding-left: 20px;
-    color: #555;
+    /* color: #555; */
   }
   
   .about-container li {
     margin-bottom: 8px;
+    color: var(--text-secondary);
   }
   
