--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,12 +1,12 @@
 /* src/components/Navbar.css */
 
 .navbar {
-    background-color: var(--primary-color);
+    background-color: var(--card-bg);
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: white;
+     color: var(--text-primary);
   }
   
   .navbar-logo {
@@ -26,6 +26,7 @@
     gap: 15px;
     margin: 0;
     padding: 0;
+    
   }
   
   .navbar-links li {
@@ -33,7 +34,7 @@
   }
   
   .navbar-links a {
-    color: var(--bg-default);
+    color: var(--text-primary);
     text-decoration: none;
     font-weight: 500;
     transition: color 0.3s ease;
@@ -67,5 +68,5 @@
 } */
   
 .star-rating-fill {
-  background: var(--primary-color); /* Dynamic theming for ratings */
+  background: var(--bg-default); /* Dynamic theming for ratings */
 }
