--- a/src/styles/SignupPage.css
+++ b/src/styles/SignupPage.css
@@ -5,10 +5,12 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    background: var(--card-bg);
+    color: var(--text-primary);    backdrop-filter: blur(10px);
   }
   
   .signup-container h2 {
-    color: #3a8dad;
+    color: var(--bg-D);
     margin-bottom: 20px;
   }
   
@@ -22,7 +24,10 @@
   .signup-form input {
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid;
+    background-color: var(--input-bg);
+    color: var(--text-primary);
+    border-color: var(--border-light);
     border-radius: 5px;
   }
   
